# dxflib

./: CMakeLists.txt
dxf/: dl_codes.h  dl_creationinterface.h  dl_dxf.h  dl_entities.h  dl_exception.h  dl_writer.h  dl_writer_ascii.h
main/: CMakeLists.txt
main/readwrite/: CMakeLists.txt  main.cpp  test_creationclass.h
main/writedimension/: CMakeLists.txt  main.cpp
main/writehatch/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/dxf/: dl_attributes.h  dl_creationadapter.h  dl_extrusion.h
