__files_group(${CMAKE_CURRENT_SOURCE_DIR}/dxf/ SRCS)
set(LIBS)
set(DEFS DXFLIB_DLL DXFLIB_LIBRARY _CRT_SECURE_NO_WARNINGS)

__add_real_target(dxflib dll SOURCE ${SRCS} LIB ${LIBS} DEF ${DEFS})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dxf DESTINATION include/ FILES_MATCHING PATTERN "*.h")
set_property(TARGET dxflib PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})